# astro-shadcn-sanity

./: .dockerignore  .gitignore  .lighthouserc.cjs  .mcp.json  .pa11yci.cjs  .releaserc.json  .repomixignore  CHANGELOG.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  initial-brainstorm.md  package-lock.json  package.json  playwright.config.ts  playwright.integration.config.ts  wrangler.toml
.claude/: settings.local.json
.github/: CODEOWNERS
_templates/fastapi-cf-worker/: .dev.vars.example  .dockerignore  DEPLOYMENT-GUIDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wrangler.jsonc
_templates/fastapi-cf-worker/scripts/: seed_kv.sh
_templates/fastapi-cf-worker/src/: app.py  dependencies.py  main.py
_templates/fastapi-cf-worker/src/models/: __init__.py  common.py  settings.py
_templates/fastapi-cf-worker/src/routers/: __init__.py  health.py
_templates/fastapi-cf-worker/src/services/: __init__.py  http_client.py
_templates/fastapi-cf-worker/tests/: __init__.py  conftest.py  test_health.py
_wp-scrape/: scrape-site.mjs  (+1 more)
discord-bot/: .gitignore  Dockerfile  ask_worker_wrangler.json  docker-compose.yml  pom.xml  pyproject.toml  wrangler.json
discord-bot/discord-bot/: .gitignore  pyproject.toml
discord-bot/discord-bot/src/: main.py  register_commands.py  sanity.py  verify.mjs
discord-bot/discord-bot/src/models/: __init__.py  discord.py
discord-bot/src/: Bot.py  ask_worker.js  main.py  register_commands.py  sanity.py  verify.mjs
discord-bot/src/main/java/Bot/: Main.java
discord-bot/src/models/: discord.py
platform-api/: .dev.vars.example  .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  wrangler.jsonc
platform-api/scripts/: seed_kv.sh
platform-api/src/: app.py  dependencies.py
platform-api/src/models/: content.py  discord.py  forms.py  platform.py  settings.py
platform-api/src/queries/: events.py  pages.py  projects.py  search.py  sponsors.py
platform-api/src/routers/: auth.py  content.py  discord.py  forms.py  health.py  platform.py
platform-api/src/services/: cf_client.py  discord_client.py  sanity_client.py  turnstile.py
platform-api/src/utils/: dataset.py
platform-api/tests/: conftest.py  test_auth.py  test_content.py  test_discord.py  test_form.py  test_health.py  test_platform.py
(+1069 files in other folders)
