[project]
name = "platform-api"
version = "0.1.0"
description = "FastAPI + Cloudflare Python Worker template"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "email-validator",
    "python-multipart>=0.0.27",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
    "pytest",
    "pytest-asyncio",
    "ruff",
]
