[project]
name = "fastapi-cf-worker"
version = "0.1.0"
description = "FastAPI + Cloudflare Python Worker template"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
    "pytest",
    "pytest-asyncio",
    "ruff",
]
